[lexer] Move token defs into separate header

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,6 +13,7 @@ target_sources(spk-interp
     PRIVATE
         main.c
 
+        interpreter/token.c
         interpreter/lexer.c
         interpreter/expressions.c
         interpreter/printer.c
