[scanner] Add basic scanner interface + some math-related tokens
Very non-functional atm

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,6 +12,8 @@ add_executable(SparkVM)
 target_sources(SparkVM
     PRIVATE
         main.c
+        scanner.c
+        token.c
 
         utils/darray.c)
 
